<resources>
    <string name="app_name">Claro Recarga</string>
    <string name="recarga">Recarga</string>
    <string name="str_username">Usuario</string>
    <string name="str_password">Contraseña</string>
    <string name="str_registrarse">Regístrate</string>
    <string name="str_ingresar">Iniciar Sesión</string>
    <string name="tituloToolbar">Claro Recarga</string>
    <string name="valor">Valor</string>
    <string name="operador">Operador</string>
    <string name="producto">Producto</string>
    <string name="observacion">Respuesta</string>
    <string name="fecha">Fecha</string>
    <string name="informe">Diez Ultimas Recargas</string>
    <!--DIFERENTES PAQUETES Y OPERADORES-->
    <string name="str_paquete_c">PAQUETE CLARO</string>
    <string name="str_paquete_m">PAQUETE MOVISTAR</string>
    <string name="str_paquete_T">PAQUETE TIGO</string>
    <string name="str_paquete_v">PAQUETE VIRGIN</string>
    <string name="str_paquete_a">PAQUETE AVANTEL</string>
    <string name="str_paquete_e">PAQUETE EXITO</string>
    <string name="str_paquete_k">PAQUETE KALLEY</string>
    <string name="str_paquete_w">PAQUETE WINGS</string>
    <string name="str_paquete_et">PAQUETE ETB</string>
    <!--TIPOS DE PAQUETES DE CLARO -->
    <string name="str_paq_dato">Paquetes Internet</string>
    <string name="str_todo_inc">Paquetes Todo Incl</string>
    <string name="str_voz">Paquetes Voz</string>
    <string name="str_ldi">Larga Distancia Int</string>
    <string name="str_app">Paquete Apps</string>
    <string name="str_reventa">Paquete Reventa</string>
    <string name="str_prepago">Tv e Internet Prepago</string>
    <!--TIPOS DE PAQUETES DE TIGO -->
    <string name="str_combo">Combos</string>
    <string name="str_paq_ldist">Larga Distancia</string>
    <string name="str_paq_min">Minutos</string>
    <string name="str_paq_bolsas">Bolsas</string>
    <!--TIPOS DE PAQUETES DE VIRGIN -->
    <string name="str_paq_ant">Antiplanes</string>
    <string name="str_paq_bolsa_dat">Bolsas de Datos</string>
    <string name="str_paq_bolsas_voz">Bolsas de Voz</string>
    <string name="str_paq_bolsas_wha">Bolsas de Whatsapp</string>
    <!--PINES -->
    <string name="str_pin_netflix">PINES NETFLIX</string>
    <string name="str_pin_spotify">PINES SPOTIFY</string>
    <string name="str_pin_imvu">PNES IMVU</string>
    <string name="str_pin_minecraft">PINES MINECRAFT</string>

    <string name="str_paq_int">Internet</string>
    <string name="str_paq_tod">Todo Incluido</string>
    <string name="str_what">Whatsapp</string>
    <!--VALORES-->
    <string name="mil">$ 1.000</string>
    <string name="dos_mil">$ 2.000</string>
    <string name="tres_mil">$ 3.000</string>
    <string name="cinco_mil">$ 5.000</string>
    <string name="diez_mil">$ 10.000</string>
    <string name="veinte_mil">$ 20.000</string>
    <string name="recargar">RECARGAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="recargas">Recargas</string>
    <string name="paquetes">Paquetes</string>
    <string name="pines">Pines</string>


    <string name="sel_paq">Seleccion El Paquete:</string>
    <string name="numero">Numero</string>
    <string name="realzar_pa">Realizar Paquete</string>


    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrarse">REGISTRO DE CLIENTES</string>
    <string name="regresar">Regresar</string>
    <string name="conectar_impresora">Sincronizar Impresora</string>
    <string name="sesionIn">Mantenerme conectado</string>
    <string name="numero_cuenta">Numero de Cuenta</string>
    <string name="cuenta_banco">788-8888-9131</string>
    <string name="tipo__cuenta">Cuenta de Ahorro</string>
    <string name="nit_sis">Siscompal Nit 900.327.586</string>
    <string name="cuenta_davi">0560056169997626</string>
    <string name="nit_sis3">Siscompal Nit 900.327.586-3</string>
    <string name="mens_cuenta">Cuentas bancarias para transferencias</string>
    <string name="mens_report">Reportar sus carga al Whatsapp:\n 316 4540917</string>
    <string name="mens_promo">Si utilizas el servicio USSD y pasas a realizar todas tus recargas por la App, recibiras 15 Sim Cards Gratis, más información en el telefono 3136500024</string>
    <string name="promo">Promo</string>
    <string name="menu">Menú</string>
</resources>
