<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentPTigo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecundaryLigth"
    tools:context=".ui.paquetes.tigo.FragmentTipoPaqueteTigo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="3"
            android:background="@drawable/bg_claro">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/internet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="3"
                    android:text="@string/str_paq_dato" />

                <Button
                    android:id="@+id/minuto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="3"
                    android:text="@string/str_paq_min" />

                <Button
                    android:id="@+id/combo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="3"
                    android:text="@string/str_combo" />

                <Button
                    android:id="@+id/btnLdi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="3"
                    android:text="@string/str_paq_ldist" />

                <Button
                    android:id="@+id/bolsaTigo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="3"
                    android:text="@string/str_paq_bolsas" />

            </LinearLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/logoClaro"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/paquete_tigo" />

    </LinearLayout>

</FrameLayout>