<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recargas.RecargasFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimary"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/logoOperador"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:visibility="gone"

                app:srcCompat="@drawable/recarga_claro" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/recargas"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp">

                <AutoCompleteTextView
                    android:id="@+id/itemReca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Seleccione Operador"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextNumber2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:hint="@string/numero"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNumero"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="4dp"
                android:hint="Valor"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtValor"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                app:columnCount="3"
                app:rowCount="2">

                <Button
                    android:id="@+id/btnMil"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/mil"
                    app:layout_columnWeight="1" />

                <Button
                    android:id="@+id/btnDosMil"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/dos_mil"
                    app:layout_columnWeight="2" />

                <Button
                    android:id="@+id/btnTresMil"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/tres_mil"
                    app:layout_columnWeight="3" />

                <Button
                    android:id="@+id/btnCincoMil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/cinco_mil"
                    app:layout_columnWeight="1" />

                <Button
                    android:id="@+id/btnDiezMil"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/diez_mil"
                    app:layout_columnWeight="2" />

                <Button
                    android:id="@+id/btnVeinteMil"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/veinte_mil"
                    app:layout_columnWeight="3" />
            </androidx.gridlayout.widget.GridLayout>

            <Button
                android:id="@+id/btnRecargas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/recargar" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>