<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecundaryLigth"
    android:orientation="vertical"
    tools:context=".ui.paquetes.claro.RealizarPaquetesClaro">

    <ProgressBar
        android:id="@+id/progressBarPaq"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminate="true"/>

    <TextView
        android:id="@+id/nombrePaquete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/valorPaquete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:inputType="numberDecimal"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:digits="0123456789.,$"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="10dp"
        android:textSize="15sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/editNumero"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/input_numero"
        android:ems="10"
        android:hint="@string/numero"
        android:inputType="number"
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp" />

    <Button
        android:id="@+id/btnRealizarPaquete"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="3dp"

        android:layout_marginRight="15dp"

        android:text="@string/realzar_pa" />

    <Button
        android:id="@+id/btnRegresar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="15dp"
        android:text="@string/regresar" />

    <TextView
        android:id="@+id/txTipoPaquete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/sel_paq"
        android:textAlignment="center"
        android:textColor="@color/todoInter"
        android:textSize="17sp" />

    <FrameLayout
        android:id="@+id/contenedorTipoPaquete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="4dp"
        android:background="@color/colorSecundaryLigth"
        android:padding="4dp">

    </FrameLayout>

</LinearLayout>